# typ2pptx

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: example.pptx  example.typ
scripts/: download_typst_ts_cli.py
tests/: conftest.py  test_alignment.py  test_chinese.py  test_code_blocks.py  test_columns.py  test_converter.py  test_images.py  test_inline_math.py  test_links.py  test_math.py  test_paragraph_detection.py  test_path_pipeline.py  test_pinit.py  test_svg_parser.py  test_table.py  test_text_positioning.py
tests/typ_sources/: alignment_test.typ  basic_text.typ  chinese_test.typ  code_block_test.typ  columns_test.typ  image_test.typ  inline_math_test.typ  link_test.typ  math_test.typ  pinit_test.typ  shapes_test.typ  speaker_notes_test.typ  table_test.typ  university_example.typ
typ2pptx/: __init__.py  __main__.py
typ2pptx/core/: __init__.py  converter.py  typst_svg_parser.py
typst2pptx/: __init__.py  __main__.py
typst2pptx/core/: __init__.py
typst2pptx/scripts/: __init__.py  svg_to_shapes.py
